--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -1,27 +1,26 @@
 %global sname oslo.serialization
 
 Name:          {{ py2name('oslo.serialization') }}
-Version:       2.4.0
+Version:       2.7.0
 Release:       0
 Summary:       OpenStack serialization library
 Group:         Development/Languages
-License:       {{ 'Apache-2.0' | license }}
+License:       {{ license('Apache-2.0') }}
 Url:           https://launchpad.net/%{sname}
-Source0:       https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:       https://pypi.python.org/packages/24/a9/17f60c463b663b35e3fe99c7a846a242ec8e336b6e954240c34de5490fc7/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('devel') }}
 BuildRequires: {{ py2pkg('mock') }}
-BuildRequires: {{ py2pkg('netaddr', (">=", "0.7.12")) }}
-BuildRequires: {{ py2pkg('oslotest') }}
+BuildRequires: {{ py2pkg('msgpack-python') }}
+BuildRequires: {{ py2pkg('netaddr') }}
 BuildRequires: {{ py2pkg('oslo.i18n') }}
+BuildRequires: {{ py2pkg('oslo.utils') }}
+BuildRequires: {{ py2pkg('oslotest') }}
 BuildRequires: {{ py2pkg('pbr') }}
-BuildRequires: {{ py2pkg('setuptools') }}
-BuildRequires: {{ py2pkg('oslo.utils', (">=", "3.5.0")) }}
-Requires:      {{ py2pkg('Babel', (">=", "1.3")) }}
-Requires:      {{ py2pkg('msgpack-python', (">=", "0.4.0")) }}
-Requires:      {{ py2pkg('oslo.utils', (">=", "3.5.0")) }}
-Requires:      {{ py2pkg('pytz', (">=", "2013.6")) }}
-Requires:      {{ py2pkg('six', (">=", "1.9.0")) }}
+Requires:      {{ py2pkg('msgpack-python') }}
+Requires:      {{ py2pkg('oslo.utils') }}
+Requires:      {{ py2pkg('pytz') }}
+Requires:      {{ py2pkg('six') }}
 BuildArch:     noarch
 
 %description
@@ -30,7 +29,7 @@ in transmittable and storable formats, such as Base64, JSON and MessagePack.
 
 %package doc
 Summary:       Documentation for OpenStack serialization library
-BuildRequires: {{ py2pkg('oslosphinx', (">=", "2.3.0")) }}
+BuildRequires: {{ py2pkg('oslosphinx') }}
 BuildRequires: {{ py2pkg('Sphinx') }}
 
 %description doc
