--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,39 +1,40 @@
 %global sname keystoneauth1
 
 Name:           {{ py2name('keystoneauth1') }}
-Version:        2.6.0
+Version:        2.8.0
 Release:        0
 Summary:        OpenStack authenticating tools
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('requests-kerberos') }}
-BuildRequires:  {{ py2pkg('positional') }}
-BuildRequires:  {{ py2pkg('iso8601') }}
+BuildRequires:  {{ py2pkg('betamax') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('iso8601') }}
 BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oauthlib') }}
+BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('os-testr') }}
-BuildRequires:  {{ py2pkg('betamax') }}
-BuildRequires:  {{ py2pkg('pycrypto') }}
+BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('pep8') }}
-BuildRequires:  {{ py2pkg('reno') }}
+BuildRequires:  {{ py2pkg('positional') }}
+BuildRequires:  {{ py2pkg('pycrypto') }}
+BuildRequires:  {{ py2pkg('requests-kerberos') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testresources') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('iso8601') }}
 Requires:       {{ py2pkg('lxml') }}
+Requires:       {{ py2pkg('oauthlib') }}
+Requires:       {{ py2pkg('positional') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('requests-kerberos') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
-Requires:       {{ py2pkg('positional') }}
 BuildArch:      noarch
 
 %description
